# GameAlpha

./: .gitignore  CMakeLists.txt  conanfile.txt  db.sql  temp.json
src/: main.cpp
src/Private/: BaseController.cpp  DbConfig.cpp  Globals.cpp  Loop.cpp  Manager.cpp  Statics.cpp
src/Private/Abilities/: Ability.cpp  AbilityManager.cpp
src/Private/Encounter/: EncounterManager.cpp
src/Private/Enemy/: EnemyManager.cpp
src/Private/Loop/: GameLoop.cpp  Loop.cpp  MainLoop.cpp
src/Private/Shop/: Manager.cpp
src/Private/Users/: Controller.cpp  User.cpp  UserManager.cpp
src/Public/: BaseController.h  DbConfig.h  Globals.h  Loop.h  Manager.h  Statics.h
src/Public/Abilities/: Ability.h  AbilityManager.h
src/Public/Encounter/: EncounterManager.h
src/Public/Enemy/: EnemyManager.h
src/Public/Loop/: GameLoop.h  Loop.h  MainLoop.h
src/Public/Shop/: Manager.h
src/Public/Users/: Controller.h  User.h  UserManager.h
src/private/: DbConfig.cpp  Manager.cpp  Statics.cpp
src/private/Bosses/: Boss.cpp  BossManager.cpp
src/private/Menus/: BaseMenu.cpp  EncounterMenu.cpp  GameMenu.cpp  MainMenu.cpp  MenuManager.cpp  ShopMenu.cpp
src/private/Structs/: Stats.cpp
src/private/Users/: User.cpp  UserManager.cpp
src/public/: DbConfig.h  Manager.h  Statics.h
src/public/Bosses/: Boss.h  BossManager.h
src/public/Menus/: BaseMenu.h  EncounterMenu.h  GameMenu.h  MainMenu.h  MenuManger.h  ShopMenu.h
src/public/Structs/: Stats.h
src/public/Users/: User.h  UserManager.h
